# MT-interface-growth

./: .gitignore  README.md  production_runs.ipynb  pyproject.toml
data/: df_A_eta_sweep.csv  df_B_droplet_radius.csv  df_C_morphology.csv
docs/: methods_SI.md  results_section.md
mttoy/: __init__.py  analysis.py  core.py  pyvista_viz.py  viz.py
